# bweakfwu

./: .gitignore  README  TODO  bweakfwu.cabal
doc/: README.txt  design.txt  technical.txt
src/: Main.hs
src/bweakfwu/: Game.hs  Geometry.hs  Handle.hs  Mathema.hs  Menu.hs  Movable.hs  Rectangle.hs  Shape.hs  System.hs  Tangible.hs  Time.hs  Vector.hs  Visible.hs  Window.hs  World.hs
src/bweakfwu/Movable/: Ball.hs  Paddle.hs
src/bweakfwu/Visible/: Board.hs  Brick.hs  ScoreKeeper.hs
