name:          bweakfwu
version:       0.0.1
synopsis:      Breakout meets PONG
description:   Arcade game inspired by Breakout and PONG
homepage:      https://secure.plaimi.net/games/bweakfwu/
license:       GPL-3
license-file:  LICENSE
author:        Alexander Berntsen, Stian Ellingsen
maintainer:    alexander@plaimi.net
category:      Game
build-type:    Simple
cabal-version: >=1.2

Executable bweakfwu
           Main-is:        Main.hs
           other-modules:  Handle
                           Mathema
                           Movable
                           Movable.Ball
                           Movable.Paddle
                           Shape
                           Tangible
                           Time
                           Vector
                           Visible
                           Visible.ScoreKeeper
                           Window
                           World
           Build-Depends:  base >=4, gloss >=1.8.0
           hs-source-dirs: src src/bweakfwu
           ghc-options:    -O2 -threaded
